--- a/styles/style.css
+++ b/styles/style.css
@@ -108,8 +108,12 @@ a {
   background-color: #FAFAFA;
 }
 .container__background-secondary .container__heading {
-  text-align: center;
   margin: 0 0.4rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 .container__background-secondary .container__heading .fa-heart {
   font-size: 1.2rem;
@@ -122,7 +126,6 @@ a {
   color: #27446A;
   line-height: 1.6rem;
   text-transform: uppercase;
-  text-align: center;
   padding-top: 2rem;
 }
 .container__background-secondary .container__heading .heading__primary {
@@ -130,17 +133,18 @@ a {
   font-weight: 500;
   line-height: 4rem;
   color: #19B7EA;
-  text-align: center;
 }
 .container__background-secondary .container__heading .second-banner-text {
   font-size: 1.3rem;
   font-size: 400;
   line-height: 2.4rem;
   color: #27446A;
-  text-align: center;
-  padding: 0.8rem 1.5rem 3.6rem 1.5rem;
+  padding-bottom: 3.6rem;
 }
 .container__background-secondary .second-banner__image {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 32rem;
   height: 30rem;
 }/*# sourceMappingURL=style.css.map */
